Revision history for firebird_fdw

0.1.6	2014-01-??
	- Push down bitwise operators << and >> (FB 2.1 and later)

0.1.5   2014-01-20
	- Add basic Firebird version detection to ensure that only
	  functions available on the remote Firebird server are actually
	  pushed down
	- Push down functions COALESCE(), NULLIF()
	- Only push down SUBSTRING() if 2nd and 3rd arguments are INTs

0.1.4   2014-01-13
	- Prevent implicit casts from being pushed down to Firebird

0.1.3   2014-01-13
	- Partial pushdown of functions in WHERE clauses to Firebird
	- Ensure parameter "disable_pushdowns" is treated as a boolean
	- Add CREATE FOREIGN SERVER/CREATE FOREIGN TABLE parameter
	  "updatable", matching the postgres_fdw parameter

0.1.2   2014-01-11
	- Partial pushdown of WHERE clauses to Firebird
	- new CREATE FOREIGN SERVER parameter "disable_pushdowns"
	- CREATE FOREIGN TABLE parameter "table" renamed to "table_name"
	  (matching the postgres_fdw parameter and for consistency with the
	  column option "column_name")

0.1.1   2014-01-01
        - Add support for column aliases (column option "column_name")

0.1.0   2014-01-01
        - Initial public release